# nu_plugin_strutils

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/commands/: mod.rs  str_compress.rs  str_decompress.rs  str_dedent.rs  str_deunicode.rs  str_indent.rs  str_shlquote.rs  str_shlsplit.rs  str_similarity.rs  str_slug.rs  str_wrap.rs
